--- a/dictionary-app/package.json
+++ b/dictionary-app/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angularx-social-login": "^2.2.1",
     "bootstrap": "^3.4.0",
     "fs": "0.0.1-security",
     "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^2.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
